Import of hydrotope overlay shapes

--- a/KalypsoModelNA/etc/schema/gml/hydrotopeOverlay_de.properties
+++ b/KalypsoModelNA/etc/schema/gml/hydrotopeOverlay_de.properties
@@ -9,7 +9,5 @@ rrmHydo_OverlayCollection_label=Overlays
 rrmHydo_OverlayCollection_description=Liste der Overlays
 rrmHydo_OverlayElement_label=Overlay Element
 rrmHydo_OverlayElement_description=Overlay Element
-rrmHydo_OverlayElement_rrmHydo_soilTypeLink_label=DRWBM Bodenschichtung
-rrmHydo_OverlayElement_rrmHydo_soilTypeLink_description=Verweis auf DRWBM Bodenschichtung
-rrmHydo_OverlayElement_rrmHydo_landuseclasslink_label=Landnutzungsklasse
-rrmHydo_OverlayElement_rrmHydo_landuseclasslink_description=Verweis auf Landnutzungsklasse
+rrmHydo_OverlayElement_rrmHydo_lnkDefinition_label=DRWBM Definition
+rrmHydo_OverlayElement_rrmHydo_lnkDefinition_description=Verweis auf DRWBM Definition
