--- a/trunk/KalypsoModelNA/etc/schema/gml/parameter_de.properties
+++ b/trunk/KalypsoModelNA/etc/schema/gml/parameter_de.properties
@@ -88,3 +88,4 @@ rrmParam_DRWBMDefinition_rrmParam_soilLayerLink_label=DRWBM Bodentyp
 rrmParam_DRWBMDefinition_rrmParam_soilLayerLink_tooltip=Verweis auf DRWBM Bodentyp
 rrmParam_DRWBMDefinition_rrmParam_landuseclassLink_label=DRWBM Landnutzungsgruppe
 rrmParam_DRWBMDefinition_rrmParam_landuseclassLink_tooltip=Verweis auf DRWBM Landnutzungsgruppe
+rrmParam_DRWBMSoiltype_label=${listProperty\:http\://www.opengis.net/gml\#name;0}
