--- a/trunk/KalypsoModelNA/etc/schema/gml/hydrotop_de.properties
+++ b/trunk/KalypsoModelNA/etc/schema/gml/hydrotop_de.properties
@@ -38,3 +38,5 @@ rrmHydrotop_Hydrotop_rrmSuds_sudLinkMember_label=Suds
 rrmHydrotop_Hydrotop_rrmSuds_sudLinkMember_tooltip=Referenz auf Suds
 rrmHydrotop_Hydrotop_rrm_catchmentLinkMember_label=Teilgebiet
 rrmHydrotop_Hydrotop_rrm_catchmentLinkMember_tooltip=Referenz auf Teilgebiet
+rrmHydrotop_Hydrotop_rrmHydrotop_lnkDefinition_label=DRWBM Definition
+rrmHydrotop_Hydrotop_rrmHydrotop_lnkDefinition_tooltip=Referenz auf DRWBM Definition
