--- a/KalypsoModelNA/etc/schema/gml/parameter_de.properties
+++ b/KalypsoModelNA/etc/schema/gml/parameter_de.properties
@@ -84,6 +84,7 @@ rrmParam_DRWBMSoilLayerParameter_rrmParam_areaPerOutlet_label=[TODO]Area per Out
 rrmParam_DRWBMSoilLayerParameter_rrmParam_areaPerOutlet_tooltip=[TODO]Area per Outlet [??]
 rrmParam_DRWBMSoilLayerParameter_rrmParam_widthOfArea_label=[TODO]Width of area [??]
 rrmParam_DRWBMSoilLayerParameter_rrmParam_widthOfArea_tooltip=[TODO]Width of area [??]
+rrmParam_DRWBMDefinition_label=${listProperty\:http\://www.opengis.net/gml\#name;0}
 rrmParam_DRWBMDefinition_rrmParam_soilLayerLink_label=DRWBM Bodentyp
 rrmParam_DRWBMDefinition_rrmParam_soilLayerLink_tooltip=Verweis auf DRWBM Bodentyp
 rrmParam_DRWBMDefinition_rrmParam_landuseclassLink_label=DRWBM Landnutzungsgruppe
