Introduced design rainfall to rrm workflow

--- a/KalypsoUIRRM/plugin_de.properties
+++ b/KalypsoUIRRM/plugin_de.properties
@@ -18,8 +18,10 @@ org.kalypso.model.rrm.soilDefinition.name=Boden
 org.kalypso.model.rrm.soilDefinition.description=
 org.kalypso.model.rrm.landuseDefinition.name=Landnutzung
 org.kalypso.model.rrm.landuseDefinition.description=
-org.kalypso.model.rrm.drwbmDefinition.name=DRWBM Definition
+org.kalypso.model.rrm.drwbmDefinition.name=DRWBM
 org.kalypso.model.rrm.drwbmDefinition.description=
+org.kalypso.model.rrm.designRainfallDefinition.name=Bemessungsniederschlag
+org.kalypso.model.rrm.designRainfallDefinition.description=
 
 org.kalypso.model.rrm.modelConstruction.name=Modellaufbau
 org.kalypso.model.rrm.modelConstruction.description==Aufgaben zur grundsätzlichen Bearbeitung des Modellaufbaus
