--- a/trunk/KalypsoModelNA/etc/schema/gml/parameter_de.properties
+++ b/trunk/KalypsoModelNA/etc/schema/gml/parameter_de.properties
@@ -78,12 +78,12 @@ rrmParam_DRWBMSoilLayerParameter_rrmParam_diameterPipe_label=Rohrdurchmesser[mm]
 rrmParam_DRWBMSoilLayerParameter_rrmParam_diameterPipe_tooltip=Rohrdurchmesser in mm
 rrmParam_DRWBMSoilLayerParameter_rrmParam_roughnessPipe_label=Rohr Rauheit
 rrmParam_DRWBMSoilLayerParameter_rrmParam_roughnessPipe_tooltip=Rohr Rauheit
-rrmParam_DRWBMSoilLayerParameter_rrmParam_overflowHeight_label=Überlauf Höhe [mm]
-rrmParam_DRWBMSoilLayerParameter_rrmParam_overflowHeight_tooltip=Höhe des Überlaufs in mm
-rrmParam_DRWBMSoilLayerParameter_rrmParam_areaPerOutlet_label=[TODO]Area per Outlet [??]
-rrmParam_DRWBMSoilLayerParameter_rrmParam_areaPerOutlet_tooltip=[TODO]Area per Outlet [??]
-rrmParam_DRWBMSoilLayerParameter_rrmParam_widthOfArea_label=[TODO]Width of area [??]
-rrmParam_DRWBMSoilLayerParameter_rrmParam_widthOfArea_tooltip=[TODO]Width of area [??]
+rrmParam_DRWBMSoilLayerParameter_rrmParam_overflowHeight_label=Überlauf Höhe [m]
+rrmParam_DRWBMSoilLayerParameter_rrmParam_overflowHeight_tooltip=Höhe des Überlaufs in m
+rrmParam_DRWBMSoilLayerParameter_rrmParam_areaPerOutlet_label=Maßnahmenfläche pro Auslass [m²]
+rrmParam_DRWBMSoilLayerParameter_rrmParam_areaPerOutlet_tooltip=Maßnahmenfläche pro Auslass in m²
+rrmParam_DRWBMSoilLayerParameter_rrmParam_widthOfArea_label=Breite Maßnahmenfläche [m]
+rrmParam_DRWBMSoilLayerParameter_rrmParam_widthOfArea_tooltip=Breite oder Länge der Maßnahmenfläche in m
 rrmParam_DRWBMDefinition_label=${listProperty\:http\://www.opengis.net/gml\#name;0}
 rrmParam_DRWBMDefinition_rrmParam_soilLayerLink_label=DRWBM Bodentyp
 rrmParam_DRWBMDefinition_rrmParam_soilLayerLink_tooltip=Verweis auf DRWBM Bodentyp
