Hydrology: renamed "Bodentypen" to "Bodenprofile"

--- a/KalypsoModelNA/etc/schema/gml/parameter_de.properties
+++ b/KalypsoModelNA/etc/schema/gml/parameter_de.properties
@@ -24,10 +24,10 @@ rrmParam_Parameter_rrmParam_snowMember_label=besteht aus Schneeparameterliste
 rrmParam_Parameter_rrmParam_snowMember_tooltip=besteht aus Schneeparameterliste
 rrmParam_Parameter_rrmParam_soilLayerMember_label=besteht aus Bodenhorizontliste
 rrmParam_Parameter_rrmParam_soilLayerMember_tooltip=besteht aus Bodenhorizontliste
-rrmParam_Parameter_rrmParam_soiltypeMember_label=besteht aus Bodentypenliste
-rrmParam_Parameter_rrmParam_soiltypeMember_tooltip=besteht aus Bodentypenliste
-rrmParam_Parameter_rrmParam_drwbmSoiltypeMember_label=besteht aus DRWBM Bodentypenliste
-rrmParam_Parameter_rrmParam_drwbmSoiltypeMember_tooltip=besteht aus DRWBM Bodentypenliste
+rrmParam_Parameter_rrmParam_soiltypeMember_label=besteht aus Bodenprofilliste
+rrmParam_Parameter_rrmParam_soiltypeMember_tooltip=besteht aus Bodenprofilliste
+rrmParam_Parameter_rrmParam_drwbmSoiltypeMember_label=besteht aus DRWBM Bodenprofilliste
+rrmParam_Parameter_rrmParam_drwbmSoiltypeMember_tooltip=besteht aus DRWBM Bodenprofilliste
 rrmParam_Parameter_rrmParam_drwbmDefinitionMember_label=besteht aus DRWBM Definitionen
 rrmParam_Parameter_rrmParam_drwbmDefinitionMember_tooltip=besteht aus DRWBM Definitionen
 rrmParam_Sealing_description=Die Versiegelungsklasse beinhaltet den Versiegelungsgrad, welcher die Aufteilung der Hydrotopfl\u00E4che in den nat\u00FCrlichen und den versiegelten (der Regenwasserkanalisation zuflie\u00DFenden) Anteil bestimmt.
@@ -68,7 +68,7 @@ rrmParam_SoilLayer_rrmParam_typkf_label=kf-Wert
 rrmParam_SoilLayer_rrmParam_typkf_tooltip=kf-Wert [mm/d]
 rrmParam_SoilLayer_rrmParam_typwp_label=Welkepunkt
 rrmParam_SoilLayer_rrmParam_typwp_tooltip=Welkepunkt [mm/dm]
-rrmParam_Soiltype_description=Der Bodentyp gibt Aufschluss \u00FCber die Schichtung des Bodens in verschiedene Bodenhorizonte.
+rrmParam_Soiltype_description=Das Bodenprofil gibt Aufschluss \u00FCber die Schichtung des Bodens in verschiedene Bodenhorizonte.
 rrmParam_Soiltype_label=${listProperty\:http\://www.opengis.net/gml\#name;0}
 rrmParam_Soiltype_rrmParam_soilLayerParameterMember_label=Bodenhorizonte
 rrmParam_Soiltype_rrmParam_soilLayerParameterMember_tooltip=Bodenhorizonte
@@ -84,9 +84,9 @@ rrmParam_DRWBMSoilLayerParameter_rrmParam_areaPerOutlet_label=Maﬂnahmenfl‰che pr
 rrmParam_DRWBMSoilLayerParameter_rrmParam_areaPerOutlet_tooltip=Maﬂnahmenfl‰che pro Auslass in m≤
 rrmParam_DRWBMSoilLayerParameter_rrmParam_widthOfArea_label=Breite Maﬂnahmenfl‰che [m]
 rrmParam_DRWBMSoilLayerParameter_rrmParam_widthOfArea_tooltip=Breite oder L‰nge der Maﬂnahmenfl‰che in m
-rrmParam_DRWBMDefinition_label=${listProperty\:http\://www.opengis.net/gml\#name;0}
-rrmParam_DRWBMDefinition_rrmParam_soilLayerLink_label=DRWBM Bodentyp
-rrmParam_DRWBMDefinition_rrmParam_soilLayerLink_tooltip=Verweis auf DRWBM Bodentyp
+rrmParam_DRWBMDefinition_label=${property\:http\://www.opengis.net/gml\#description;-keine Beschreibung vorhanden-}
+rrmParam_DRWBMDefinition_rrmParam_soilLayerLink_label=DRWBM Bodenprofil
+rrmParam_DRWBMDefinition_rrmParam_soilLayerLink_tooltip=Verweis auf DRWBM Bodenprofil
 rrmParam_DRWBMDefinition_rrmParam_landuseclassLink_label=DRWBM Landnutzungsgruppe
 rrmParam_DRWBMDefinition_rrmParam_landuseclassLink_tooltip=Verweis auf DRWBM Landnutzungsgruppe
-rrmParam_DRWBMSoiltype_label=${listProperty\:http\://www.opengis.net/gml\#name;0}
+rrmParam_DRWBMSoiltype_label=${property\:http\://www.opengis.net/gml\#description;-keine Beschreibung vorhanden-}
