--- a/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
+++ b/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
@@ -203,7 +203,7 @@ IdwOptionsLayoutPart_4=Maximale Anzahl von Stationen
 IdwOptionsLayoutPart_5=F\u00FCr Inverse Distanz Gewichtung verwendete Zeitreihen
 IdwWizardLayoutPart_0=Allgemeine Eigenschaften
 IdwWizardLayoutPart_1=\u00C4nderung des Parameter-Typs \u00E4ndert Liste der Zeitreihen. Nicht gespeicherte \u00C4nderungen gehen verloren. Fortfahren?
-ImportPedologyWizard.0=Es sind keine Bodentypen definiert. Import nicht m\u00F6glich.
+ImportPedologyWizard.0=Es sind keine Bodenprofile definiert. Import nicht m\u00F6glich.
 ImportTimeseriesAction_0=Zeitreihe importieren
 ImportTimeseriesAction_1=Importiere eine Zeitreihe aus Fremddaten und Zuweisung zur gew\u00E4hlten Station.
 ImportTimeseriesOperation.0=Falsch aufgel\u00F6ste Tageszeitreihe - Uhrzeiten variieren.
