--- a/trunk/KalypsoModelNA/etc/schema/gml/parameter_de.properties
+++ b/trunk/KalypsoModelNA/etc/schema/gml/parameter_de.properties
@@ -76,8 +76,8 @@ rrmParam_DRWBMSoiltype_rrmParam_soilLayerParameterMember_label=DRWBM-Bodenhorizo
 rrmParam_DRWBMSoiltype_rrmParam_soilLayerParameterMember_label=DRWBM-Bodenhorizonte
 rrmParam_DRWBMSoilLayerParameter_rrmParam_diameterPipe_label=Rohrdurchmesser[mm]
 rrmParam_DRWBMSoilLayerParameter_rrmParam_diameterPipe_tooltip=Rohrdurchmesser in mm
-rrmParam_DRWBMSoilLayerParameter_rrmParam_roughnessPipe_label=Rohr Rauheit
-rrmParam_DRWBMSoilLayerParameter_rrmParam_roughnessPipe_tooltip=Rohr Rauheit
+rrmParam_DRWBMSoilLayerParameter_rrmParam_roughnessPipe_label=Rohr Rauheit [ks]
+rrmParam_DRWBMSoilLayerParameter_rrmParam_roughnessPipe_tooltip=Rauheit Rohr in ks
 rrmParam_DRWBMSoilLayerParameter_rrmParam_overflowHeight_label=Überlauf Höhe [m]
 rrmParam_DRWBMSoilLayerParameter_rrmParam_overflowHeight_tooltip=Höhe des Überlaufs in m
 rrmParam_DRWBMSoilLayerParameter_rrmParam_areaPerOutlet_label=Maßnahmenfläche pro Auslass [m²]
