Options for design rainfall shown in simulation-gft

--- a/KalypsoUIRRM/src/org/kalypso/ui/rrm/catalog/templatemessages_de.properties
+++ b/KalypsoUIRRM/src/org/kalypso/ui/rrm/catalog/templatemessages_de.properties
@@ -30,6 +30,7 @@ modelNet.gmt.subCatchments=Teilgebiete - Vernetzung
 modelNet.gmt.groundwater=Grundwasser - Vernetzung
 
 control.gft.general=Allgemeines
+control.gft.synthN=synthetische Niederschlagereignisse
 control.gft.simulation=Simulationsmanagement
 control.gft.calculation=Rechnung
 control.gft.syntheticPrecipitation=synthetische Niederschlagereignisse
