--- a/trunk/KalypsoModelNA/etc/schema/gml/parameter_de.properties
+++ b/trunk/KalypsoModelNA/etc/schema/gml/parameter_de.properties
@@ -90,3 +90,9 @@ rrmParam_DRWBMDefinition_rrmParam_soilLayerLink_tooltip=Verweis auf DRWBM Bodenp
 rrmParam_DRWBMDefinition_rrmParam_landuseclassLink_label=DRWBM Landnutzungsgruppe
 rrmParam_DRWBMDefinition_rrmParam_landuseclassLink_tooltip=Verweis auf DRWBM Landnutzungsgruppe
 rrmParam_DRWBMSoiltype_label=${property\:http\://www.opengis.net/gml\#description;-keine Beschreibung vorhanden-}
+rrmParam_DRWBMSoilLayerParameter_rrmParam_drainagePipeKFvalue_label=Durchlässigkeit Dränrohr [KF-Wert]
+rrmParam_DRWBMSoilLayerParameter_rrmParam_drainagePipeKFvalue_tooltip=Durchlässigkeit Dränrohr in KF-Wert
+rrmParam_DRWBMSoilLayerParameter_rrmParam_drainagePipeSlope_label=Gefälle Dränrohr
+rrmParam_DRWBMSoilLayerParameter_rrmParam_drainagePipeSlope_tooltip=Gefälle Dränrohr
+rrmParam_DRWBMSoilLayerParameter_rrmParam_isSealed_label=Abdichtung
+rrmParam_DRWBMSoilLayerParameter_rrmParam_isSealed_tooltip=Abdichtung [ja / nein]
