--- a/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/catalog/templatemessages_de.properties
+++ b/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/catalog/templatemessages_de.properties
@@ -42,6 +42,7 @@ modelConstruction.gft.group.timeseries=Zeitreihenverknüpfung
 
 node.modelConstruction.gft.group.branching=Verzweigung (optional)
 node.modelConstruction.gft.group.qqRelation=zusätzliche Abgabe (optional)
+node.modelConstruction.gft.label.qqRelatedNode=Zielknoten
 
 rhbchannel.modelConstruction.gft.group.additonalOutflow=zusätzliche Abgabe (optional)
 
