--- a/KalypsoModelNA/etc/schema/gml/parameter_de.properties
+++ b/KalypsoModelNA/etc/schema/gml/parameter_de.properties
@@ -84,7 +84,7 @@ rrmParam_DRWBMSoilLayerParameter_rrmParam_areaPerOutlet_label=Maﬂnahmenfl‰che pr
 rrmParam_DRWBMSoilLayerParameter_rrmParam_areaPerOutlet_tooltip=Maﬂnahmenfl‰che pro Auslass in m≤
 rrmParam_DRWBMSoilLayerParameter_rrmParam_widthOfArea_label=Breite Maﬂnahmenfl‰che [m]
 rrmParam_DRWBMSoilLayerParameter_rrmParam_widthOfArea_tooltip=Breite oder L‰nge der Maﬂnahmenfl‰che in m
-rrmParam_DRWBMDefinition_label=${property\:http\://www.opengis.net/gml\#description;-keine Beschreibung vorhanden-}
+rrmParam_DRWBMDefinition_label=${listProperty\:http\://www.opengis.net/gml\#name;0;description doesn't exists}
 rrmParam_DRWBMDefinition_rrmParam_soilLayerLink_label=DRWBM Bodenprofil
 rrmParam_DRWBMDefinition_rrmParam_soilLayerLink_tooltip=Verweis auf DRWBM Bodenprofil
 rrmParam_DRWBMDefinition_rrmParam_landuseclassLink_label=DRWBM Landnutzungsgruppe
