--- a/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
+++ b/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
@@ -45,7 +45,7 @@ MultiCatchmentModelRunner_8=Executing generator...
 MultiCatchmentModelRunner_7=Executing catchment model '%s'...
 MultiCatchmentModelRunner_6=Failed to execute multi catchment model
 MultiCatchmentModelRunner_5=Modify model.gml and save the results...
-MultiCatchmentModelRunner_4=Merge observations for each catchment... 
+MultiCatchmentModelRunner_4=Merge observations for each catchment...
 MultiCatchmentModelRunner_2=Generate timeseries with %d catchment models...
 MultiCatchmentModelRunner_1=Validating multi generator...
 MultiCatchmentModelRunner_0=Apply multi catchment model
@@ -90,7 +90,7 @@ IdwFactorsOperation_1=Calculate inverse distance weighting factors
 ImportTimeseriesOperation.2=Invalid timeseries. Timeseries contains gaps and has missing values.
 IdwFactorsOperation_0=Created by Inverse Distance Weighting Method (%d)
 ImportTimeseriesOperation.1=R\u00FCcksprung detected
-ImportTimeseriesOperation.0=Invalid day resultion detected \u2013 times are varying
+ImportTimeseriesOperation.0=Invalid day resolution detected \u2013 times are varying
 NewCalcCaseAction_0=Update calc case
 ValidateRuecksprungOperation.0=R\u00FCcksprung detection
 ImportTimeseriesOperation_9=Error in R\u00FCcksprung detection.
@@ -128,7 +128,7 @@ EditTimeseriesDialog_1=Properties
 EditTimeseriesDialog_0=Edit Timeseries
 RepairTimeseriesOperation_0=Timeseries '%s' will be automatic repaired and adjusted.
 org.kalypso.ui.rrm.internal.hydrotops.RRMCreateHydrotopsHandler.8=Saving Hydrotopes...
-RepairMissingTimestepsOperation_3=Missing timesteps in timeseries %s.\r\n\r\nAdd missing values automatically?
+RepairMissingTimestepsOperation_3=Missing time steps in timeseries %s.\r\n\r\nAdd missing values automatically?
 ZmlInlineFeatureDialog.1=Open Observation Dialog
 org.kalypso.ui.rrm.internal.hydrotops.RRMCreateHydrotopsHandler.7=Hydrotope Intersection
 RepairMissingTimestepsOperation_2=Gaps are detected
@@ -167,7 +167,7 @@ NewLinearSumIdwAction_0=New Catchment Model (Linear Sum) via Inverse Distance We
 AbstractResultTreeNodeUiHandler_1=Open calculation log
 AbstractResultTreeNodeUiHandler_0=Simulation\: %s
 EditLinearSumThiessenAction.1=Failed to edit the catchment model...
-EditLinearSumThiessenAction.0=%s. This could have happend because the model has changed. The catchments will be newly initialized...
+EditLinearSumThiessenAction.0=%s. This could have happened because the model has changed. The catchments will be newly initialized...
 ValidateSimulationJob_19=The values are unchanged.
 TimeseriesComposite.0=Measurement date range
 ValidateSimulationJob_18=Some values of the simulation has changed.
@@ -198,13 +198,13 @@ TimeseriesComposite_1=Data File
 EditLinearSumThiessenAction_0=Edit Thiessen
 HydrotopesTaskHandler_4=Hydrotopes
 EditMultiDialog_6=Comment
-RepairTimestampsOperation_3=Auto repair wrong timestamps?
+RepairTimestampsOperation_3=Auto repair wrong time stamps?
 ParameterUiHandler_0=Parameter Type
 CatchmentModelVerifier_1=Verify the catchment models of the simulation '%s'
 TimeseriesComposite_0=Timestep
 HydrotopesTaskHandler_3=Pedology
 EditMultiDialog_5=Description
-RepairTimestampsOperation_2=Repair wron timestamps?
+RepairTimestampsOperation_2=Repair wron time stamps?
 CatchmentModelVerifier_0=Verify the catchment models of the simulation '%s'...
 HydrotopesTaskHandler_2=Geology
 EditMultiDialog_4=Dialog has validation errors. %s
@@ -234,7 +234,7 @@ SetBasicModelDelegate.2=Update basic model from calculation case
 SetBasicModelDelegate.1=Please select a calculation case in the navigator
 SetBasicModelDelegate.0=Update basic model from calculation case
 CleanupSimulationWorker_3=Error during cleanup of the simulation.
-CleanupSimulationWorker_2=Cleanup of the simulation was successfull.
+CleanupSimulationWorker_2=Cleanup of the simulation was successful.
 CleanupSimulationWorker_1=Cleanup simulation...
 CleanupSimulationWorker_0=Cleanup simulation...
 KalypsoNAProjectWizard.ChannelPageTitle=Import Strands
@@ -284,20 +284,20 @@ KalypsoNAProjectWizardPage.PageDescription=This page allows to import data from 
 ValidateTimestepsVisitor_2=Time Step Validation Status
 ValidateTimestepsVisitor_1=Gap (missing values) in timeseries detected - between %s and %s
 ValidateTimestepsVisitor_0=yy-MM-dd HH\:mm\:ss
-TimeseriesMappingTypeUiHandler_1=Timeseries mappings - 
+TimeseriesMappingTypeUiHandler_1=Timeseries mappings -
 TimeseriesMappingTypeUiHandler_0=Mapping definitions
 IdwGeneratorWizard_2=Please select the timeseries that should be used to generate the catchment model.
 IdwGeneratorWizard_1=Inverse Distance Weighting Method
 EditGeneratorAction.1=Failed to edit the catchment model...
-EditGeneratorAction.0=%s. This could have happend because the model has changed. The catchments will be newly initialized...
+EditGeneratorAction.0=%s. This could have happened because the model has changed. The catchments will be newly initialized...
 EditLinearSumDialog.1=Changing the parameter type needs to update the list of timeseries. Unsaved changes will be lost. Continue?
 EditLinearSumDialog.0=Dialog has validation errors. %s
-EditLinearSumDialog_9=Timestep
+EditLinearSumDialog_9=Time step
 EditLinearSumDialog_8=Station
 EditLinearSumDialog_7=Group
 CatchmentModelHelper_9=The general properties of the generator '%s' do match the general properties of the first generator '%s'.
 EditLinearSumDialog_6=No catchment selected.
-CatchmentModelHelper_8=The timestamp of the generator '%s' does not match the timestamp of the first generator '%s'.
+CatchmentModelHelper_8=The time stamp of the generator '%s' does not match the timestamp of the first generator '%s'.
 EditGeneratorAction_1=Edits the properties of the generator
 EditLinearSumDialog_5=Description
 CatchmentModelHelper_7=The timestep of the generator '%s' does not match the timestep of the first generator '%s'.
@@ -533,7 +533,7 @@ EditTimeseriesMappingWizardPage_1=Edit the properties of the mapping on this pag
 UpdateCalcCaseOperation_1=Problem(s) occured during update
 EditTimeseriesMappingWizardPage_0=Properties
 UpdateCalcCaseOperation_0=Updating calc case(s)
-ParameterGeneratorUiHandler.0=Catchment models - 
+ParameterGeneratorUiHandler.0=Catchment models -
 PrepareShorttermSimulationWorker_13=Failed to load initial values from simulation '%s'.
 PrepareShorttermSimulationWorker_12=Initial values were loaded from simulation '%s'.
 DesignRainfallDefinitionTaskHandler_0=Design Rainfall Definitions
