--- a/trunk/KalypsoModelNA/etc/schema/gml/hydrotop_de.properties
+++ b/trunk/KalypsoModelNA/etc/schema/gml/hydrotop_de.properties
@@ -1,40 +1,37 @@
 #platform:/resource//WSPMDemo/naModellSchema/hydrotop.xsd
 #Wed Aug 19 13:19:44 CEST 2009
 http___www.opengis.net_gml=gml
-http___www.tuhh.de_hydrotop=rrmHydrotop
-http___sourceforge.kalypso.org_schemata_hydrology_suds=rrmSuds
+http___sourceforge.kalypso.org_schemata_hydrology_hydrotope=rrmHydrotop
 http___www.tuhh.de_kalypsoNA=rrm
-rrmHydrotop_Hydrotop_description=Hydrotop
-rrmHydrotop_Hydrotop_label=Hydrotop
-rrmHydrotop_Hydrotop_rrmHydrotop_area_label=Hydrotopfläche
-rrmHydrotop_Hydrotop_rrmHydrotop_area_tooltip=Flaeche des Hydrotopes [m²]
-rrmHydrotop_Hydrotop_rrmHydrotop_corrSealing_label=Faktor Versiegelung
-rrmHydrotop_Hydrotop_rrmHydrotop_corrSealing_tooltip=Korrekturfaktor Versiegelungsgrad [-]
-rrmHydrotop_hydTypeEnumerationType_Bodenspeicher_label=Bodenspeicher
-rrmHydrotop_hydTypeEnumerationType_Bodenspeicher_tooltip=Bodenspeicher
-rrmHydrotop_hydTypeEnumerationType_Dachbegruenung_label=Dachbegrünung
-rrmHydrotop_hydTypeEnumerationType_Dachbegruenung_tooltip=Dachbegrünung
-rrmHydrotop_hydTypeEnumerationType_MuldenRigole_label=Mulden-Rigole
-rrmHydrotop_hydTypeEnumerationType_MuldenRigole_tooltip=Mulden-Rigole
-rrmHydrotop_Hydrotop_rrmHydrotop_hydType_label=Typ
-rrmHydrotop_Hydrotop_rrmHydrotop_hydType_tooltip=Typ
-rrmHydrotop_Hydrotop_rrmHydrotop_landuse_label=Nutzungsschl\u00FCssel
-rrmHydrotop_Hydrotop_rrmHydrotop_landuse_tooltip=Link zum Nutzungsschl\u00FCssel
-rrmHydrotop_Hydrotop_rrmHydrotop_m_f1gws_label=Zuflussanteil GW
-rrmHydrotop_Hydrotop_rrmHydrotop_m_f1gws_tooltip=Zuflussanteil Grundwasser [-] (\= 0-1)
-rrmHydrotop_Hydrotop_rrmHydrotop_m_perkm_label=max. Perkolationsrate
-rrmHydrotop_Hydrotop_rrmHydrotop_m_perkm_tooltip=maximale Perkolationsrate [m/s]
-rrmHydrotop_Hydrotop_rrmHydrotop_position_label=Geometrie
-rrmHydrotop_Hydrotop_rrmHydrotop_position_tooltip=Geometrie
-rrmHydrotop_Hydrotop_rrmHydrotop_soiltype_label=Bodenschl\u00FCssel
-rrmHydrotop_Hydrotop_rrmHydrotop_soiltype_tooltip=Link zum Bodenschl\u00FCssel
-rrmHydrotop_NAHydrotop_description=NA-Hydrotop
-rrmHydrotop_NAHydrotop_label=NA-Hydrotop
-rrmHydrotop_NAHydrotop_rrmHydrotop_hydrotopMember_label=Hydrotop Member
-rrmHydrotop_NAHydrotop_rrmHydrotop_hydrotopMember_tooltip=Hydrotop Member
-rrmHydrotop_Hydrotop_rrmSuds_sudLinkMember_label=Suds
-rrmHydrotop_Hydrotop_rrmSuds_sudLinkMember_tooltip=Referenz auf Suds
-rrmHydrotop_Hydrotop_rrm_catchmentLinkMember_label=Teilgebiet
-rrmHydrotop_Hydrotop_rrm_catchmentLinkMember_tooltip=Referenz auf Teilgebiet
-rrmHydrotop_Hydrotop_rrmHydrotop_lnkDefinition_label=DRWBM Definition
-rrmHydrotop_Hydrotop_rrmHydrotop_lnkDefinition_tooltip=Referenz auf DRWBM Definition
+rrmHydrotop_Hydrotope_description=Hydrotop
+rrmHydrotop_Hydrotope_label=Hydrotop
+rrmHydrotop_Hydrotope_rrmHydrotop_area_label=Hydrotopfläche
+rrmHydrotop_Hydrotope_rrmHydrotop_area_tooltip=Flaeche des Hydrotopes [m²]
+rrmHydrotop_Hydrotope_rrmHydrotop_corrSealing_label=Faktor Versiegelung
+rrmHydrotop_Hydrotope_rrmHydrotop_corrSealing_tooltip=Korrekturfaktor Versiegelungsgrad [-]
+rrmHydrotop_Hydrotope_rrmHydrotop_landuse_label=Nutzungsschl\u00FCssel
+rrmHydrotop_Hydrotope_rrmHydrotop_landuse_tooltip=Link zum Nutzungsschl\u00FCssel
+rrmHydrotop_Hydrotope_rrmHydrotop_landuseLink_label=Landnutzungsfläche
+rrmHydrotop_Hydrotope_rrmHydrotop_landuseLink_tooltip=Referenz auf Landnutzung
+rrmHydrotop_Hydrotope_rrmHydrotop_gwInflowRate_label=Zuflussanteil GW
+rrmHydrotop_Hydrotope_rrmHydrotop_gwInflowRate_tooltip=Zuflussanteil Grundwasser [-] (\= 0-1)
+rrmHydrotop_Hydrotope_rrmHydrotop_maxPerc_label=max. Perkolationsrate
+rrmHydrotop_Hydrotope_rrmHydrotop_maxPerc_tooltip=maximale Perkolationsrate [m/s]
+rrmHydrotop_Hydrotope_rrmHydrotop_position_label=Geometrie
+rrmHydrotop_Hydrotope_rrmHydrotop_position_tooltip=Geometrie
+rrmHydrotop_Hydrotope_rrmHydrotop_soiltype_label=Bodenprofil
+rrmHydrotop_Hydrotope_rrmHydrotop_soiltype_tooltip=Bodenprofil
+rrmHydrotop_Hydrotope_rrmHydrotop_pedologyLink_label=Pedologie
+rrmHydrotop_Hydrotope_rrmHydrotop_pedologyLink_tooltip=Referenz auf Pedologie
+rrmHydrotop_Hydrotope_rrmHydrotop_geologyLink_label=Geologie
+rrmHydrotop_Hydrotope_rrmHydrotop_geologyLink_tooltip=Referenz auf Geologie
+rrmHydrotop_HydrotopeCollection_description=Hydrotope
+rrmHydrotop_HydrotopeCollection_label=Hydrotope
+rrmHydrotop_HydrotopeCollection_rrmHydrotop_hydrotopeMember_label=Hydrotope
+rrmHydrotop_HydrotopeCollection_rrmHydrotop_hydrotopeMember_tooltip=Hydrotope
+rrmHydrotop_Hydrotope_rrm_catchmentLinkMember_label=Teilgebiet
+rrmHydrotop_Hydrotope_rrm_catchmentLinkMember_tooltip=Referenz auf Teilgebiet
+rrmHydrotop_Hydrotope_rrmHydrotop_lnkDefinition_label=DRWBM Definition
+rrmHydrotop_Hydrotope_rrmHydrotop_lnkDefinition_tooltip=Referenz auf DRWBM Definition
+rrmHydrotop_Hydrotope_rrmHydrotop_overlayLink_label=Overlay Fläche
+rrmHydrotop_Hydrotope_rrmHydrotop_overlayLink_tooltip=Referenz auf Overlay Element
