--- a/trunk/KalypsoModelNA/etc/schema/gml/hydrotopeOverlay_de.properties
+++ b/trunk/KalypsoModelNA/etc/schema/gml/hydrotopeOverlay_de.properties
@@ -7,7 +7,7 @@ http___sourceforge.kalypso.org_schemata_hydrology_suds=rrmSuds
 http___sourceforge.kalypso.org_schemata_hydrology_landuse=rrmLanduse
 rrmHydo_OverlayCollection_label=Overlays
 rrmHydo_OverlayCollection_description=Liste der Overlays
-rrmHydo_OverlayElement_label=Overlay Element
+rrmHydo_OverlayElement_label=${listProperty\:http\://www.opengis.net/gml\#name;0;-Name unbekannt-}
 rrmHydo_OverlayElement_description=Overlay Element
 rrmHydo_OverlayElement_rrmHydo_lnkDefinition_label=DRWBM Definition
 rrmHydo_OverlayElement_rrmHydo_lnkDefinition_description=Verweis auf DRWBM Definition
