--- a/KalypsoModelNA/etc/schema/gml/geologie_de.properties
+++ b/KalypsoModelNA/etc/schema/gml/geologie_de.properties
@@ -1,17 +1,16 @@
 #platform:/resource//WSPMDemo/naModellSchema/geologie.xsd
 #Wed Aug 19 13:19:35 CEST 2009
-http___sourceforge.kalypso.org_schemata_hydrology_geologie=rrmGeo
+http___sourceforge.kalypso.org_schemata_hydrology_geology=rrmGeo
 http___www.opengis.net_gml=gml
-http___www.tuhh.de_hydrotop=rrmHydrotop
-rrmGeo_GeologieCollection_description=GeologieCollection
-rrmGeo_GeologieCollection_label=GeologieCollection
-rrmGeo_GeologieCollection_rrmGeo_geologieMember_label=geologieMember
-rrmGeo_GeologieCollection_rrmGeo_geologieMember_tooltip=geologieMember
-rrmGeo_Geologie_description=Geologie
-rrmGeo_Geologie_label=Geologie
-rrmGeo_Geologie_rrmGeo_location_label=Lage
-rrmGeo_Geologie_rrmGeo_location_tooltip=Lage
-rrmGeo_Geologie_rrmHydrotop_m_f1gws_label=Anteil Grundwasser
-rrmGeo_Geologie_rrmHydrotop_m_f1gws_tooltip=Zuflussanteil Grundwasser [-] (\= 0-1)
-rrmGeo_Geologie_rrmHydrotop_m_perkm_label=Max. Perkolationsrate
-rrmGeo_Geologie_rrmHydrotop_m_perkm_tooltip=Maximale Perkolationsrate [m/s]
+rrmGeo_GeologyCollection_description=GeologieCollection
+rrmGeo_GeologyCollection_label=GeologieCollection
+rrmGeo_GeologyCollection_rrmGeo_GeologyMember_label=geologieMember
+rrmGeo_GeologyCollection_rrmGeo_GeologyMember_tooltip=geologieMember
+rrmGeo_Geology_description=Geologie
+rrmGeo_Geology_label=${listProperty\:http\://www.opengis.net/gml\#name;0;-Name unbekannt-}
+rrmGeo_Geology_rrmGeo_location_label=Lage
+rrmGeo_Geology_rrmGeo_location_tooltip=Lage
+rrmGeo_Geology_rrmGeo_gwInflowRate_label=Anteil Grundwasser
+rrmGeo_Geology_rrmGeo_gwInflowRate_tooltip=Zuflussanteil Grundwasser [-] (\= 0-1)
+rrmGeo_Geology_rrmGeo_maxPerc_label=Max. Perkolationsrate
+rrmGeo_Geology_rrmGeo_maxPerc_tooltip=Maximale Perkolationsrate [m/s]
