--- a/KalypsoModelNA/etc/schema/gml/pedologie_de.properties
+++ b/KalypsoModelNA/etc/schema/gml/pedologie_de.properties
@@ -7,7 +7,7 @@ rrmPedo_SoiltypeCollection_label=Bodenart Collection
 rrmPedo_SoiltypeCollection_rrmPedo_soiltypeMember_label=Bodenprofile
 rrmPedo_SoiltypeCollection_rrmPedo_soiltypeMember_tooltip=Verweis auf Bodenprofile
 rrmPedo_Soiltype_description=Bodenart
-rrmPedo_Soiltype_label=Bodenart
+rrmPedo_Soiltype_label=${listProperty\:http\://www.opengis.net/gml\#name;0;-Name unbekannt-}
 rrmPedo_Soiltype_rrmPedo_location_label=Geometrie
 rrmPedo_Soiltype_rrmPedo_location_tooltip=Geometrie
 rrmPedo_Soiltype_rrmPedo_soilTypeLink_label=Bodenprofil
