--- a/KalypsoModelNA/src/org/kalypso/model/hydrology/internal/i18n/messages.properties
+++ b/KalypsoModelNA/src/org/kalypso/model/hydrology/internal/i18n/messages.properties
@@ -154,6 +154,9 @@ AbstractImportOperation.2=Read error at feature %d
 AbstractImportOperation.1=Problems during import
 org.kalypso.convert.namodel.NAControlConverter.49=Wrong selection of the synthetic rainfall distribution.
 AbstractImportOperation.0=Import successfully terminated.
+TimeseriesMappingType_0=Gauge measurement
+TimeseriesMappingType_1=Node inflow
+TimeseriesMappingType_2=Storage evaporation
 TsFileWriter.0=Failed to write timeseries for subcatchment '%s'
 org.kalypso.convert.namodel.NaModelInnerCalcJob.83=konnte Umh\u00FCllende nicht generieren, evt. keine WQ-Informationen vorhanden , Fehler\: %s
 NA_PostprocessingJob_0=Problem during calculation of the differences
