Changed hydrotopes templates according to schema changes

--- a/KalypsoUIRRM/src/org/kalypso/ui/rrm/catalog/templatemessages_de.properties
+++ b/KalypsoUIRRM/src/org/kalypso/ui/rrm/catalog/templatemessages_de.properties
@@ -21,6 +21,11 @@ hydrotop.gmt.geology=Geologie
 hydrotop.gmt.overlay=Overlay (DRWBM)
 hydrotop.gmt.hydrotopes=Hydrotope
 
+hydrotopes.gft.group.commonProperties=Allgemeine Eigenschaften
+hydrotopes.gft.group.links=Referenzen
+hydrotopes.gft.group.deprecatedValues=Werte
+hydrotopes.gft.label.deprecatedValues=Direkteingabe Hydrotopwerte. Nur noch verwendet, wenn die entsprechenden Referenzen auf die Eingangsdaten nicht gesetzt sind. Sollte nur noch für Altprojekte verwendet werden. 
+
 modelNet.gmt.map.name=Vernetzung
 modelNet.gmt.nodes=Knoten - Vernetzung
 modelNet.gmt.virtualStrands=Virtuelle Stränge - Vernetzung
