Fixed some bugs from hydrotope schema changes.

--- a/KalypsoUIRRM/src/org/kalypso/ui/rrm/catalog/templatemessages_de.properties
+++ b/KalypsoUIRRM/src/org/kalypso/ui/rrm/catalog/templatemessages_de.properties
@@ -6,7 +6,6 @@ rhbchannel.gft.rhbvalidatetooltip=Parameterprüfung der WVQ-Beziehung
 kmchannel.gft.kmparameters=Gerinne
 kmchannel.gft.subparams=Kalinin-Miljukov Parameter
 
-
 overview.gmt.map.name=Übersicht
 overview.gmt.nodes=Knoten
 overview.gmt.virtualStrands=Virtuelle Stränge
@@ -24,7 +23,7 @@ hydrotop.gmt.hydrotopes=Hydrotope
 hydrotopes.gft.group.commonProperties=Allgemeine Eigenschaften
 hydrotopes.gft.group.links=Referenzen
 hydrotopes.gft.group.deprecatedValues=Werte
-hydrotopes.gft.label.deprecatedValues=Direkteingabe Hydrotopwerte. Nur noch verwendet, wenn die entsprechenden Referenzen auf die Eingangsdaten nicht gesetzt sind. Sollte nur noch für Altprojekte verwendet werden. 
+hydrotopes.gft.label.deprecatedValues=Direkteingabe Hydrotopwerte. Sollte nur für Altprojekte verwendet werden.\nWerte werden verwendet, wenn die Referenzen auf die Eingangsdaten nicht gesetzt sind. 
 
 modelNet.gmt.map.name=Vernetzung
 modelNet.gmt.nodes=Knoten - Vernetzung
