--- a/KalypsoModelNA/src/org/kalypso/model/hydrology/internal/i18n/messages.properties
+++ b/KalypsoModelNA/src/org/kalypso/model/hydrology/internal/i18n/messages.properties
@@ -31,6 +31,7 @@ org.kalypso.convert.namodel.NaModelInnerCalcJob.157=Statistical report\: unable 
 org.kalypso.convert.namodel.hydrotope.LanduseImportOperation.3=Null geometry at feature\: %s
 HRBFileWriter_2=Failed to read WVQ definition for storage '%s'
 NaPostProcessor.0=Failed to read Kalypso-NA log file. Calculation failed.
+NaPostProcessor.2=Simulation failed, results will not be postprocessed
 org.kalypso.convert.namodel.hydrotope.LanduseImportOperation.2=Unknown landuse class '%s' at feature-id %d
 HRBFileWriter_1=Failed to write sea evaporation time series
 org.kalypso.convert.namodel.NaModelInnerCalcJob.155=max. Abfluss
@@ -70,6 +71,11 @@ NetFileAnalyser_0=Inconsistent net\: Node '%s' with branch has no upstream chann
 org.kalypso.convert.namodel.manager.LzsimManager.42=Anfangswerte fuer Kurzzeitsimulation geschrieben, Datum\: %s
 ShapeWithHash.1=Failed to access shape row '%d', property '%s'
 ShapeWithHash.0=Failed to load shape '%s'
+StationClasses_0=Unknown station class: %s
+StationClasses_2=Unknown dictionary: 
+StationClassesCatalog_0=Unknown station class: %s
+StationClassesCatalog_1=Unknown station class: %s
+StationClassesCatalog_3=Unknown dictionary: 
 NaModelInnerCalcJob.0=Simulation cancelled by user
 org.kalypso.convert.namodel.NaModelInnerCalcJob.149=Knoten - Nr.
 org.kalypso.convert.namodel.NaModelInnerCalcJob.140=Der Dateiname wurde daher um die ObjektID erweitert\: %s.
@@ -91,6 +97,12 @@ org.kalypso.convert.namodel.manager.ChannelManager.1=ChannelType %s is not suppo
 org.kalypso.convert.namodel.manager.ChannelManager.0=\ km(%d)\: %s
 org.kalypso.convert.namodel.manager.HydrotopManager.3=Severe error in area calculation. The sum of hydrotop areas (%.2f m2) does not match the catchment area (ID\: %s, area\: %.2f m2). Difference\: %.2f m2 (%.2f%%).
 org.kalypso.convert.namodel.manager.HydrotopManager.2=Hydrotops from GML
+LanduseHydrotopeInput_0=Landuse
+LanduseHydrotopeInput_1=landuse class not set
+LinearSumGenerator_0=Generiere Zeitreihen für %d Gebiete...
+LinearSumGenerator_1=Generiere Zeitreihen...
+LinearSumGenerator_2=Sammle gewichtete Zeitreihen zur Erzeugung von Zeitreihe %d zu Gebiet '%s'...
+LinearSumGenerator_3=Erzeuge Zeitreihe %d zu Gebiet '%s' mit %d gewichteten Zeitreihen...
 LzsimWriter.7=Failed to write initial condition for channel %s
 org.kalypso.convert.namodel.manager.HydrotopManager.1=Landuse class '%s' referenced by hydrotop '%s' is not defined. Calculation aborted.
 org.kalypso.convert.namodel.manager.HydrotopManager.0=The landuse type '%s' already exists. Please check the landuse types.
@@ -104,6 +116,7 @@ org.kalypso.convert.namodel.hydrotope.HydrotopeCreationOperation.4=Dissolving hy
 LzsimWriter.1=Missing start value for hydrotope\: %s. If a start condition file is specified, all values must be present.
 org.kalypso.convert.namodel.hydrotope.HydrotopeCreationOperation.3=Creating hydrotopes... (%d of %d)
 LzsimWriter.0=Missing start condition for catchment\: %s
+LzsToGml.0=Failed to read lzsim file: %s
 org.kalypso.convert.namodel.hydrotope.HydrotopeCreationOperation.2=Creation of hydrotopes
 org.kalypso.convert.namodel.hydrotope.HydrotopeCreationOperation.1=Geometric intersection
 org.kalypso.convert.namodel.hydrotope.HydrotopeCreationOperation.0=Hydrotope Intersection
@@ -149,11 +162,18 @@ org.kalypso.convert.namodel.manager.NetFileManager.11=Netzdatei\: Kennziffer Zu-
 org.kalypso.convert.namodel.manager.NetFileManager.10=Netzdatei\: iueb>0 wird nicht unterstuetzt
 NetFileWriter_0=Failed to access nodelist
 org.kalypso.convert.namodel.job.NaModelParameterAnalyseSimulation.12=copy somewhere
+AbstractEvaporationCalculator_0=evaporation.calculation
+AbstractEvaporationCalculator_1=Starting calcualtion of water based evaporation.
+AbstractEvaporationCalculator_2=Can't calucate evaporation for date %s. Missing parameter: humidity: %.2f, sunshine: %.2f, temperature: %.2f, wind velocity: %.2f
+AbstractEvaporationCalculator_3=Evaporation calculation
+AbstractHydrotopeInput.1=Element '%s': %s
 AbstractImportOperation.3=Shape Data is too big
 AbstractImportOperation.2=Read error at feature %d
 AbstractImportOperation.1=Problems during import
 org.kalypso.convert.namodel.NAControlConverter.49=Wrong selection of the synthetic rainfall distribution.
 AbstractImportOperation.0=Import successfully terminated.
+CatchmentHydrotopeInput_0=sealing factor outside it's valid range [0.0 - 1.0]
+CatchmentHydrotopeInput_1=Catchments
 TimeseriesMappingType_0=Gauge measurement
 TimeseriesMappingType_1=Node inflow
 TimeseriesMappingType_2=Storage evaporation
@@ -191,7 +211,42 @@ org.kalypso.convert.namodel.NaModelInnerCalcJob.5=Temperatur
 org.kalypso.convert.namodel.DefaultPathGenerator.6=Gesamtabfluss
 org.kalypso.convert.namodel.NaModelInnerCalcJob.4=Datum
 org.kalypso.convert.namodel.DefaultPathGenerator.5=Grundwasserstand
+HydroHash_0=Failed to find catchment for hydrotope '%s'
+HydrotopeBuilder_0=Building hydrotopes
+HydrotopeBuilder_1=Adding hydrotope %d of %d
+HydrotopeBuilder_2=Built %d hydrotopes
+HydrotopeCreationGeometryValidator_0=%s - checking geometry %%d of %%d
+HydrotopeCreationGeometryValidator_1=Geometry is missing
+HydrotopeCreationGeometryValidator_2=Area is very small (%f m²)
+HydrotopeCreationGeometryValidator_3=Geometries
+HydrotopeCreationGeometryValidator_4=%s - checking intersection %%d of %%d
+HydrotopeCreationGeometryValidator_5=overlaps another element (%.2f m² = %.2f %%)
+HydrotopeCreationGeometryValidator_6=Total overlap area is %.2f m² (%.2f %%%%)
+HydrotopeCreationGeometryValidator_7=Topological correctness
+HydrotopeCreationGeometryValidator_8=Element '%s': %s
+HydrotopeCreationInputValidation.0=Validating layer %d of %d - %s
+HydrotopeCreationOperation.0=Initialisation
+HydrotopeCreationOperation.1=Input validation
+HydrotopeCreationOperation.2=Critical during inut validation. Unable to proceed.
+HydrotopeCreationOperation.3=Combine hydrotopes with identical attributes
+HydrotopeCreationOperation.4=Validate Hydrotopes
+HydrotopeDissolver_0=Dissolving hydrotopes
+HydrotopeDissolver_1=Hashing geometry %d of %d
+HydrotopeInfo.0=Failed to determine area for hydrotope '%s'
+HydrotopeInfo.1=Failed to determine sealing correction factor for hydrotope %s
+HydrotopeInfo.2=Total sealing %.2f outside valid range (0.0 - 1.0) for hydrotope %s.
+HydrotopeInputIndexer.0=%d of %d - %s
+HydrotopeValidator_0=Validating hydrotopes
+HydrotopeValidator_1=Building index
+HydrotopeValidator_2=Hydrotopes
+HydrotopeValidator_3=Checking coverage of catchments
+HydrotopeValidator_4=Index hydrotopes
+HydrotopeValidator_5=Catchment '%s' is not covered by any hydrotope
+HydrotopeValidator_6=Catchment '%s' is not completely covered by hydrotopes (difference is %.1f %%)
+HydrotopeValidator_7=Area of Catchment '%s' is smaller than the sum of it's hydrotope areas (difference is %.1f %%)
+HydrotopeValidator_8=Catchment coverage
 HydrotopeWriter.0=Unknown soiltype '%s' in hydrotope '%s'.
+HydrotopeWriter.1=WARNING: Number of soil layers (=%d) in hydrotope (%s) is not equal to number of factors (=%d) in sub-catchments (%s)
 org.kalypso.convert.namodel.DefaultPathGenerator.4=Bodenspeicherbilanz
 org.kalypso.convert.namodel.DefaultPathGenerator.3=Bodenfeuchte
 org.kalypso.convert.namodel.DefaultPathGenerator.2=Schneehoehe
@@ -229,8 +284,17 @@ org.kalypso.convert.namodel.DefaultPathGenerator.13=KluftGWAbfluss
 NAModelSimulation.2=Failed to backup results to directory\: %s (%s)
 org.kalypso.convert.namodel.DefaultPathGenerator.12=Kluftgrundw1abfluss
 NAModelSimulation.1=Failed to read start condition file
+NAModelSimulation.10=Pre processing
+NAModelSimulation.11=Processing
+NAModelSimulation.12=Post processing
 org.kalypso.convert.namodel.DefaultPathGenerator.11=Basisabfluss
 NAModelSimulation.0=Failed to convert data to Kalypso-NA.exe format files\: %s
+NAModelSimulation.4=Simulation canceled...
+NAModelSimulation.5=Simulation canceled
+NAModelSimulation.6=Simulation canceled...
+NAModelSimulation.7=Simulation canceled
+NAModelSimulation.8=Simulation finished
+NAModelSimulation.9=Simulation failed
 org.kalypso.convert.namodel.DefaultPathGenerator.10=Oberflaechenabfluss(versiegelt)
 org.kalypso.convert.namodel.manager.CatchmentManager.92=Es m\u00FCssen 100%% abgeschlagen werden. Restanteil des Grundwasserabflusses (%.2f%%) wird nicht weiter bilanziert. Ist dies gew\u00FCnscht?
 org.kalypso.convert.namodel.manager.NetFileManager.9=Netzdatei\: iabg>0 wird nicht unterstuetzt
@@ -269,6 +333,12 @@ FeatureListGeometryIntersector.3=Problem at feature
 FeatureListGeometryIntersector.2=Total area difference from intersection\: %s
 FeatureListGeometryIntersector.1=Problem while intersecting \r\n%s\r\n%s
 FeatureListGeometryIntersector.0=Problem at feature %s
+GeologyHydrotopeInput_0=Geology
+GeologyHydrotopeInput_1=groundwater factor is not set
+GeologyHydrotopeInput_2=groundwater factor is outside it's valid range [0.0 - 1.0]
+GeologyHydrotopeInput_3=maximal perkolation rate is not set
+MultiGenerator_0=Generiere Zeitreihen mit %d Gebietsmodellen...
+MultiGenerator_1=Generiere Zeitreihen...
 NAModelPreprocessor.6=Applying calibration factors\u2026
 org.kalypso.convert.namodel.NAModellConverter.9=inserting geometries\: catchments
 NAModelPreprocessor.5=Failed to unzip preprocessed ascii files
@@ -282,4 +352,13 @@ NAModelPreprocessor.0=Unexpected error while generating Kalypso-NA ASCII files
 org.kalypso.convert.namodel.NAModellConverter.3=Conversion from ASCII to GML was successfull
 org.kalypso.convert.namodel.NaModelInnerCalcJob.32=Simulation konnte nicht erfolgreich durchgef\u00FChrt werden - lade Log-Dateien
 org.kalypso.convert.namodel.net.NetElementCircleFinder.0=Found another circle\:\r\n
+NASimulationOperation_0=Simulation failed
+NASimulationOperation_1=Failed to access model file
+NASimulationOperation_2=Failed to load model data
+NASimulationOperation_6=The simulation log does not exist.
+NASimulationOperation_7=The simulation log could not be loaded.
+NASimulationOperation_8=Failed to delete temporary simulation directory
 NAStatistics.0=Failed to create statistics\: %s
+OverlayHydrotopeInput_0=Overlay
+PedologyHydrotopeInput_0=Pedology
+PedologyHydrotopeInput_1=soil type not set
