--- a/KalypsoModelWspmTuhhUI/src/org/kalypso/model/wspm/tuhh/ui/i18n/messages_de.properties
+++ b/KalypsoModelWspmTuhhUI/src/org/kalypso/model/wspm/tuhh/ui/i18n/messages_de.properties
@@ -99,11 +99,11 @@ org.kalypso.model.wspm.tuhh.ui.chart.BuildingBridgeTheme.0=Br\u00FCcke
 CsvExportColumnsPage_7=Ausgabeart
 CsvExportColumnsPage_6=Name
 CsvExportColumnsPage_5=Station
-ProfileResultExportPage_2=Es wurden keine Ergebnisse ausgew\u00E4hlt.
+ProfileResultExportPage_2=Es wurden keine Wasserspiegellagen ausgew\u00E4hlt.
 org.kalypso.model.wspm.tuhh.ui.rules.BrueckeRule.19=Bordvollpunkte sind aus dem Bauwerksprofil zu entfernen
-ProfileResultExportPage_1=W\u00E4hlen Sie die Ergebnisdaten aus, die zu den Profilen hinzugef\u00FCgt werden.
+ProfileResultExportPage_1=W\u00E4hlen Sie die Wasserspiegellagen aus, die zu den Profilen hinzugef\u00FCgt werden.
 CsvExportColumnsPage_3=Bitte w\u00E4hlen Sie auf dieser Seite die Optionen f\u00FCr den Export aus.
-ProfileResultExportPage_0=Vorhandene Ergebnisse
+ProfileResultExportPage_0=Vorhandene Wasserspiegellagen
 CsvExportColumnsPage_2=Export Optionen
 CsvExportColumnsPage_1=nur Profile
 CsvExportColumnsPage_0=einzelne Profilpunkte
