Introduced new correction factors for gw inflow rate and max. percolation.  Factors are shown to user in hydrotopes task.

--- a/KalypsoModelNA/etc/schema/gml/namodell_de.properties
+++ b/KalypsoModelNA/etc/schema/gml/namodell_de.properties
@@ -101,8 +101,14 @@ rrm_Catchment_rrm_verdunstungZR_label=Zeitreihe V lokal
 rrm_Catchment_rrm_verdunstungZR_tooltip=Zeitreihe V lokal
 rrm_Catchment_rrm_zft_label=Zeitfl\u00E4chenfunktion
 rrm_Catchment_rrm_zft_tooltip=Zeitfl\u00E4chenfunktion, Abflusswirksame Fl\u00E4che in abh\u00E4ngigkeit der Zeit
-rrm_Catchment_rrm_corrSealing_label=Faktor Versiegelung
-rrm_Catchment_rrm_corrSealing_tooltip=Korrekturfaktor Versiegelungsgrad [-]
+
+rrm_Catchment_rrm_corrSealing_label=Korrektur Versiegelung
+rrm_Catchment_rrm_corrSealing_tooltip=Korrekturfaktor Versiegelungsgrad [-] (> 0.0)
+rrm_Catchment_rrm_corrMaxPerc_label=Korrektur Perkolationsrate
+rrm_Catchment_rrm_corrMaxPerc_tooltip=Korrekturfaktor der maximalen Perkolationsrate [-] (> 0.0)
+rrm_Catchment_rrm_corrGWInflowRate_label=Korrektur Grundwasseranteil
+rrm_Catchment_rrm_corrGWInflowRate_tooltip=Korrekturfaktor des Zuflussanteils Grundwater [-] (> 0.0)
+
 rrm_ChannelCollection_description=Gew\u00E4sserstrangliste
 rrm_ChannelCollection_label=Gew\u00E4sserstrangliste
 rrm_ChannelCollection_rrm_channelMember_label=hat
