--- a/KalypsoModelNA/etc/schema/gml/geologie_de.properties
+++ b/KalypsoModelNA/etc/schema/gml/geologie_de.properties
@@ -10,7 +10,7 @@ rrmGeo_Geology_description=Geologie
 rrmGeo_Geology_label=${listProperty\:http\://www.opengis.net/gml\#name;0;-Name unbekannt-}
 rrmGeo_Geology_rrmGeo_location_label=Lage
 rrmGeo_Geology_rrmGeo_location_tooltip=Lage
-rrmGeo_Geology_rrmGeo_gwInflowRate_label=Anteil Grundwasser
+rrmGeo_Geology_rrmGeo_gwInflowRate_label=Grundwasseranteil
 rrmGeo_Geology_rrmGeo_gwInflowRate_tooltip=Zuflussanteil Grundwasser [-] (\= 0-1)
 rrmGeo_Geology_rrmGeo_maxPerc_label=Max. Perkolationsrate
 rrmGeo_Geology_rrmGeo_maxPerc_tooltip=Maximale Perkolationsrate [m/s]
