Validation of new correction factor. Correction factor sealing may be bigger than 1.0

--- a/KalypsoModelNA/src/org/kalypso/model/hydrology/internal/i18n/messages_de.properties
+++ b/KalypsoModelNA/src/org/kalypso/model/hydrology/internal/i18n/messages_de.properties
@@ -193,7 +193,7 @@ org.kalypso.convert.namodel.NaModelInnerCalcJob.155=max. Abfluss
 CatchmentHydrotopeInput_1=Teileinzugsgebiet
 HydrotopeInfo.2=Gesamtversiegelung %.2f au\u00DFerhalb des Wertebereichs [0.0 - 1.0] f\u00FCr Hydrotop %s.
 org.kalypso.convert.namodel.schema.binding.GeologyCollection.1=Geology '%s' was deleted due to intersection
-CatchmentHydrotopeInput_0=Versieglungsfaktor au\u00DFerhalb des Wertebereichs [0.0 - 1.0]
+CatchmentHydrotopeInput_0=Negativer Wert: %
 NaFortranLogTranslater.4=Fehler beim Schreiben der konvertierten Logdatei %s
 HydrotopeInfo.1=Fehler bei Bestimmtung des Versieglungsfaktors f\u00FCr Hydrotop '%s'
 org.kalypso.convert.namodel.NaModelInnerCalcJob.153=Datum
