--- a/KalypsoModelNA/src/org/kalypso/model/hydrology/internal/i18n/messages.properties
+++ b/KalypsoModelNA/src/org/kalypso/model/hydrology/internal/i18n/messages.properties
@@ -193,7 +193,7 @@ org.kalypso.convert.namodel.NaModelInnerCalcJob.155=max. Abfluss
 CatchmentHydrotopeInput_1=Catchments
 HydrotopeInfo.2=Total sealing %.2f outside valid range (0.0 - 1.0) for hydrotope %s.
 org.kalypso.convert.namodel.schema.binding.GeologyCollection.1=Geology '%s' was deleted due to intersection
-CatchmentHydrotopeInput_0=sealing factor outside it's valid range [0.0 - 1.0]
+CatchmentHydrotopeInput_0=Negative value: %s
 NaFortranLogTranslater.4=Failed to write translated KalypsoNA log file %s
 HydrotopeInfo.1=Failed to determine sealing correction factor for hydrotope %s
 org.kalypso.convert.namodel.NaModelInnerCalcJob.153=Datum
